Update contact email and footer information

--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
         <p>Let's transform agricultural education in Maryland together</p>
         
         <div class="cta-buttons">
-            <a href="mailto:will@mindgrub.com" class="btn-primary">Schedule a Demo</a>
+            <a href="mailto:howdy@edinfinite.com" class="btn-primary">Schedule a Demo</a>
             <a href="#" class="btn-secondary" onclick="downloadPitch(); return false;">Download Pitch Deck</a>
         </div>
     </section>
@@ -984,11 +984,11 @@
                 <a href="#" class="footer-link">Technology</a>
                 <a href="#" class="footer-link">Impact</a>
                 <a href="#" class="footer-link">Partners</a>
-                <a href="mailto:will@mindgrub.com" class="footer-link">Contact</a>
+                <a href="mailto:howdy@edinfinite.com" class="footer-link">Contact</a>
             </div>
             <p>&copy; 2025 Maryland Farm-to-School CTE Innovation | Baltimore AI Producers Lab</p>
             <p style="opacity: 0.7; margin-top: 1rem; font-size: 0.9rem;">
-                Powered by Mindgrub Technologies | MSDE Division of College and Career Pathways
+                Powered by edinfinite technologies
             </p>
         </div>
     </footer>
@@ -1142,7 +1142,7 @@ local + educational mission
         }
 
         function downloadPitch() {
-            alert('Pitch deck download coming soon! Contact will@mindgrub.com for full presentation.');
+            alert('Pitch deck download coming soon! Contact howdy@edinfinite.com for full presentation.');
         }
 
         // Smooth scroll
