--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 </div>
                 <div class="stat">
                     <span class="stat-number">$250K</span>
-                    <span class="stat-label">Grant Funded</span>
+                    <span class="stat-label">Funding Needed</span>
                 </div>
             </div>
             
