--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
             </div>
             
             <div class="impact-card">
-                <span class="impact-number">$300K</span>
+                <span class="impact-number">300K</span>
                 <div class="impact-label">Revenue Generated</div>
                 <div class="impact-description">Student earnings + program sustainability</div>
             </div>
